Adding user message if no menu is found (either if menu is empty or no menu matched the keyword)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,7 @@
 
     <!--    fragment menu-->
     <string name="search_result_label">Hasil pencarian untuk\u0020</string>
+    <string name="menu_not_found">Tidak ada menu yang ditemukan</string>
 
 
 <!--    fragment menu detail deskripsi-->
